--- a/src/assets/assets.qrc
+++ b/src/assets/assets.qrc
@@ -23,5 +23,7 @@
         <file>maximize.svg</file>
         <file>close.svg</file>
         <file>normalize.svg</file>
+        <file>brightness.svg</file>
+        <file>undo.svg</file>
     </qresource>
 </RCC>
