--- a/src/ui/MaterialYou/resources.qrc
+++ b/src/ui/MaterialYou/resources.qrc
@@ -31,6 +31,7 @@
         <file>impl/CursorDelegate.qml</file>
         <file>ScrollView.qml</file>
         <file>ScrollBar.qml</file>
+        <file>StackView.qml</file>
     </qresource>
     <qresource prefix="/"/>
 </RCC>
