[feature] auto update

--- a/src/assets/assets.qrc
+++ b/src/assets/assets.qrc
@@ -25,5 +25,8 @@
         <file>normalize.svg</file>
         <file>brightness.svg</file>
         <file>undo.svg</file>
+        <file>replay_5.svg</file>
+        <file>forward_5.svg</file>
+        <file>celebration.wav</file>
     </qresource>
 </RCC>
