Make brightness slider more easy to attach

--- a/assets/assets.qrc
+++ b/assets/assets.qrc
@@ -30,5 +30,7 @@
         <file>celebration.wav</file>
         <file>copy.svg</file>
         <file>global.svg</file>
+        <file>brightness_fill.svg</file>
+        <file>more_horiz.svg</file>
     </qresource>
 </RCC>
